Version 2.02.63 -  
================================
  Permit mimage LVs to be striped in lvcreate and lvresize.
  Fix pvmove allocation to take existing parallel stripes into account.
  Add pvmove_source_seg to struct lv_segment.
  Fix incorrect removal of symlinks after LV deactivation fails.
  Fix is_partitioned_dev not to attempt to reopen device.
  Fix another thread race in clvmd.
  Refactor management of vg->pvs list.
  Fix lcov rules and generate better coverage report.
  Improve vg_validate to detect some loops in lists.
  Change most remaining log_error WARNING messages to log_warn.
  Always use blocking lock for VGs and orphan locks.
  Allocate all segments memory from vg private mempool.
  Return newly allocated PV segment after segment split.
  Optimise PV segments search for the most last segment search case.
  Remove vg_validate call when parsing cached metadata.
  Use hash table of LVs to speed up parsing of text metadata with many LVs.
  Fix two messages, add a whitespace and parentheses
  When dmeventd is not forking because of -d flag, don't kill the parent process
  Fix 'make install' when $(builddir) is different from $(srcdir).
  Fix dso resource leak in error path of dmeventd.
  Use C locales and use_mlockall for dmeventd.
  Fix --alloc contiguous policy only to allocate one set of parallel areas.
  Do not allow {vg|lv}change --ignoremonitoring if on clustered VG.
  Improved dependency tracking for dmeventd and liblvm2cmd sources.
  Improved Makefile rules for distclean and cflow targets.
  Add ability to create mirrored logs for mirror LVs.
  Fix clvmd cluster propagation of dmeventd monitoring mode.
  Allow ALLOC_ANYWHERE to split contiguous areas.
  Use INTERNAL_ERROR for internal errors throughout tree.
  Add some assertions to allocation code.
  Introduce pv_area_used into allocation algorithm and add debug messages.
  Add activation/monitoring to lvm.conf.
  Add --monitor and --ignoremonitoring to lvcreate.